# landmarks-search-app

./: .dockerignore  .gitignore  LICENSE  README.md  app_utils.py  docker-compose.yml  landmarks_app.py  notes.md  pyproject.toml  requirements.txt  tmp.ipynb
api/: Dockerfile  api.py  pyproject.toml
api/checkpoints/: README.md
api/notebooks/: build_filtered_index.ipynb
bot/: Dockerfile  README.md  bot.py  docker-compose.yml
notebooks/: roadmap_visualize.ipynb  validate_retrieval.ipynb  vector_search.ipynb
retrieval/: evaluate.py  getter.py  run.py  single_experiment_runner.py
retrieval/config/: default.yaml
retrieval/config/dataset/: gldv2_10k.yaml  gldv2_10k_classification_splits.yaml
retrieval/config/experience/: default.yaml
retrieval/config/model/: cgd.yaml  resnet.yaml
retrieval/datasets/: __init__.py  gldv2.py
retrieval/engine/: accuracy_calculator.py  base_update.py  chepoint.py  cross_validation_splits.py  evaluate.py  get_knn.py  landmark_evaluation.py  train.py
retrieval/losses/: smooth_rank_ap.py
retrieval/models/: cgd.py  create_projection_head.py  net.py
retrieval/samplers/: hierarchical_sampler.py  m_per_class_sampler.py  random_sampler.py
scripts/: run_roadmap_exp.sh  run_roadmap_exp_cgd.sh  run_roadmap_exp_classification_splits_deit.sh  run_roadmap_exp_classification_splits_resnet.sh
src/: knn.py  model.py
web/: Dockerfile  README.md  docker-compose.yml  web.py
